HelpingHandsProject/force-app/main/default/objects/Volunteer__c/Volunteer__c.object-meta.xml
<CustomObject>
    <label>Volunteer</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Volunteer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>