HelpingHandsProject/force-app/main/default/objects/Volunteer__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <label>Availability</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekdays</fullName>
            </value>
            <value>
                <fullName>Weekends</fullName>
            </value>
            <value>
                <fullName>Evenings</fullName>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>