HelpingHandsProject/force-app/main/default/objects/Volunteer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Give your Email Address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>