HelpingHandsProject/force-app/main/default/objects/Volunteer__c/fields/Joined_Date__c.field-meta.xml
<CustomField>
    <fullName>Joined_Date__c</fullName>
    <description>When did you Join the Organization</description>
    <label>Joined Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>