HelpingHandsProject/force-app/main/default/objects/Volunteer__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Give your Phone/Mobile Number</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>