HelpingHandsProject/force-app/main/default/objects/Volunteer__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <description>How Hours did you work in the Organization</description>
    <label>Total Hours</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>