HelpingHandsProject/force-app/main/default/objects/Volunteer__c/fields/Volunteer_Name__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Name__c</fullName>
    <description>Give your Full Name</description>
    <label>Volunteer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>